all files added in branch 2

--- a/otherScripts/2.html
+++ b/otherScripts/2.html
@@ -1,43 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Confirmation Message Quiz</title>
+    <title>Table Example</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-
-	<h1>Confirmation Message Quiz</h1>
-
-	<form>
-		<h2>1. What is a confirmation message in relation to submitting a form?</h2>
-		<label><input type="checkbox" name="q1" value="a"> a) A message that confirms the form has been received and is being processed</label><br>
-		<label><input type="checkbox" name="q1" value="b"> b) A message that asks for confirmation before submitting the form</label><br>
-		<label><input type="checkbox" name="q1" value="c"> c) A message that confirms the user's identity before submitting the form</label><br>
-		<label><input type="checkbox" name="q1" value="d"> d) A message that confirms the user's payment information before submitting the form</label><br>
-
-		<h2>2. What is the purpose of a confirmation message after submitting a form?</h2>
-		<label><input type="checkbox" name="q2" value="a"> a) To let the user know that the form has been submitted successfully</label><br>
-		<label><input type="checkbox" name="q2" value="b"> b) To provide an opportunity for the user to review and edit their form submission</label><br>
-		<label><input type="checkbox" name="q2" value="c"> c) To ask the user to confirm their submission before it is processed</label><br>
-		<label><input type="checkbox" name="q2" value="d"> d) To verify the user's identity before the form is processed</label><br>
-
-		<h2>3. What information is typically included in a confirmation message?</h2>
-		<label><input type="checkbox" name="q3" value="a"> a) The user's personal information, such as their name and address</label><br>
-		<label><input type="checkbox" name="q3" value="b"> b) The details of the form submission, such as the information provided and the time of submission</label><br>
-		<label><input type="checkbox" name="q3" value="c"> c) Instructions for what the user should do next after submitting the form</label><br>
-		<label><input type="checkbox" name="q3" value="d"> d) An apology for any inconvenience caused by submitting the form</label><br>
-
-		<h2>4. Why is it important to display a confirmation message after submitting a form?</h2>
-		<label><input type="checkbox" name="q4" value="a"> a) To provide feedback to the user that the form has been submitted successfully</label><br>
-		<label><input type="checkbox" name="q4" value="b"> b) To prevent the user from submitting the form multiple times</label><br>
-		<label><input type="checkbox" name="q4" value="c"> c) To give the user an opportunity to correct any errors before the form is processed</label><br>
-		<label><input type="checkbox" name="q4" value="d"> d) To verify the user's identity before the form is processed</label><br>
-
-		<h2>5. How can a confirmation message be made more user-friendly?</h2>
-		<label><input type="checkbox" name="q4" value="a"> a) By including technical details about the form submission process</label><br>
-		<label><input type="checkbox" name="q4" value="b"> b) By using clear and simple language to convey the message</label><br>
-		<label><input type="checkbox" name="q4" value="c"> c) By displaying the message in a small font size to save screen space</label><br>
-		<label><input type="checkbox" name="q4" value="d"> d) By requiring the user to perform an additional action to confirm their submission</label><br>
-
-    </form>
+    <table>
+        <thead>
+            <tr>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Email</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>John</td>
+                <td>Doe</td>
+                <td>john.doe@example.com</td>
+            </tr>
+            <tr>
+                <td>Jane</td>
+                <td>Smith</td>
+                <td>jane.smith@example.com</td>
+            </tr>
+            <tr>
+                <td>Mike</td>
+                <td>Johnson</td>
+                <td>mike.johnson@example.com</td>
+            </tr>
+        </tbody>
+    </table>
 </body>
 </html>
