--- a/other scripts 2/gitfile1.html
+++ b/other scripts 2/gitfile1.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>main-branch testing</h1>
-    <h1>branch2 testing</h1>
-    <h1>branch1</h1>
+    <h3>branch1</h3>
+
+    <p>branch 1</p>
 </body>
 </html>
